# CoroutineSamples

./: .gitignore  LICENSE  README.md
Coroutine/Async/client/: main.cpp
Coroutine/Async/server/: CMakeLists.txt  main.cpp
Coroutine/Awaiter/: CMakeLists.txt  main.cpp  task.hpp  task_handler.hpp
Coroutine/Awaiter/Task/: CMakeLists.txt
Coroutine/Awaiter/TaskHandler/: CMakeLists.txt
Coroutine/Awaiter/Waiter/: CMakeLists.txt  Waiter.hpp
Coroutine/Awaiter/app/: CMakeLists.txt
Coroutine/Awaiter/src/: CMakeLists.txt
Coroutine/Awaiter/src/Task/: CMakeLists.txt  Task.cpp  Task.hpp
Coroutine/Awaiter/src/TaskHandler/: CMakeLists.txt  TaskHandler.cpp  TaskHandler.hpp
Coroutine/Awaiter/src/Waiter/: CMakeLists.txt  Waiter.hpp
Coroutine/Genrator/: CMakeLists.txt  generator.hpp  main.cpp
